# openmythos

./: OPENMYTHOS_KNOWLEDGE.md  README.md  TODO_AUTOMATION.md  pyproject.toml
docs/: architecture.md
openmythos/: __init__.py  benchmark.py  ds_v4_sandbox.py  inference.py  model.py  model_v3.py  moe.py
tests/: test_ds_v4_integration.py  test_kerala_series.py  test_model.py  test_moe_integration.py
